--- a/strangler-microservice/src/main/web-component/public/index.html
+++ b/strangler-microservice/src/main/web-component/public/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Strangler Web Components</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <title>strangler-web-components</title>
   </head>
   <body>
     <div id="strangler-message-component"
